deploy/k8s/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calton
  namespace: calton
spec:
  selector:
    app: calton
  ports:
    - name: http
      port: 80
      targetPort: http
